# IGD-Final

./: CMakeLists.txt  README.md  main  main.cpp
src/: engine.cpp  main.cpp  testing.cpp
src/components/: PlayerMovement.hpp  Transform.hpp
src/core/: Component.hpp  Entity.hpp
src/engine/: Engine..hpp  Engine.cpp  Engine.hpp
src/runtime/: Runtime.cpp  Runtime.hpp  SceneData.hpp
